# hungry-ninja-api

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  er.mmd  hungry_ninja.db  pyproject.toml
.github/workflows/: tests.yml
app/: main.py
app/auth/: __init__.py
app/data/: __init__.py  auditable_model.py  family.py  family_member.py  ingredient.py  instruction.py  recipe.py  recipe_ingredient.py  recipe_part_group.py  recipe_tag.py  suggested_tag_history.py  tag.py
app/mapping/: __init__.py  recipe_mapping.py
app/models/: __init__.py  family.py  ingredient.py  recipe.py  suggestion.py
app/routes/: __init__.py  family_router.py  recipe_router.py
app/services/: __init__.py  exceptions.py  family_service.py  recipe_service.py  recipe_service_plain.py
tests/: conftest.py  test_example.py  test_main.py
