[project]
name = "hungry-ninja-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi-auth0>=0.5.0",
    "fastapi[standard]>=0.136.1",
    "logfire[fastapi,sqlalchemy]>=4.32.1",
    "numpy>=2.4.6",
    "pydantic-ai>=1.87.0",
    "sqlmodel>=0.0.38",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --cov=app --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
